--- a/styly.css
+++ b/styly.css
@@ -41,10 +41,9 @@
 }
 .title {
     width: 769px;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 700;
     font-size: 64px;
-    line-height: 100%;
     vertical-align: middle;
     margin-left: 120px;
     color: #000;
@@ -52,7 +51,7 @@
 .name {
     width: 720px;
     height: 64px;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
@@ -77,7 +76,7 @@
     background: #ffffff;
 }
 button {
-   font-family: Montserrat;
+   font-family: "Montserrat";
     font-weight: 600;
     font-size: 24px;
     line-height: 142%;
@@ -97,7 +96,10 @@ button:hover {
     padding-left: 49px;
     background-image: url(img.html/fr.svg);
     backdrop-filter: blur(50px)
-
+    
+}
+.navigation::-webkit-scrollbar {
+    width: 0;
 }
 .top {
     width: 1440px;
@@ -106,10 +108,9 @@ button:hover {
 }   
 .top__title {
     color: #FFFFFF;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 700;
     font-size: 64px;
-    line-height: 100%;
     vertical-align: middle;
     margin-left: 120px;
     
@@ -117,7 +118,7 @@ button:hover {
 .names {
     width: 788px;
     height: 96px;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
@@ -130,13 +131,11 @@ button:hover {
     display: grid;
     grid-template-columns: repeat(12 , 1fr);
     gap: 32px;
-    padding-right: 32px;
+    padding-right: 40px;
     padding-left: 119px;
 }
 
 .top__card {
-    width: 378px;
-    height: 473px;
     border-radius: 30px;
     background: #FFFFFF;
     box-shadow: 0px 12.61px 42.25px -7.57px #00000021;
@@ -146,7 +145,6 @@ button:hover {
     border-radius: 30px;
 }
 .game {
-    padding-right: 32px;
     padding-bottom: 36px;
     padding-left: 32px;
     background: #FFFFFF;
@@ -157,26 +155,25 @@ button:hover {
     height: 36px;
     border-radius: 52px;
     padding-top: 8px;
+    padding-bottom: 10px;
     padding-left: 16px;
     background: #F7F7F7;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 500;
     font-size: 16px;
     vertical-align: bottom;
     color: #202027;
+    text-decoration-line: none;
 }
 .top__link {
     display: flex;
     flex-direction: column;
-    font-family: inherit;
+    font-family: "Montserrat";
     font-weight: 700;
     font-size: 32px;
-    line-height: 100%;
     vertical-align: middle;
     color: #202027;
-    text-decoration: none;
-    padding-top: 16px;
-
+    text-decoration-line: none;
 }
 .mingame {
     width: 1440px;
@@ -202,16 +199,17 @@ button:hover {
 .mingame__names {
     width: 504px;
     height: 59px;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 700;
     font-size: 48px;
     line-height: 100%;
     vertical-align: middle;
     color: #202027;
+    
 }
 .mingame__try  {
     width: 457px;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
@@ -232,7 +230,7 @@ button:hover {
 .button {
     width: 96px;
     height: 34px;
-    font-family: Montserrat;
+    font-family: "Montserrat";
     font-weight: 600;
     font-size: 24px;
     line-height: 142%;
@@ -249,7 +247,7 @@ button:hover {
     width: 285px;
     font-weight: 600;
     font-size: 24px;
-    line-height: 100%;
+    font-family: "Montserrat";
     text-align: center;
     vertical-align: middle;
     color: #000;
