--- a/styly.css
+++ b/styly.css
@@ -7,14 +7,13 @@
 }
 .head {
     background-color: #E1FF8F;
-    width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 .biges {
     position: absolute;
-    left: 860px;
+    left: 740px;
     border-width: 1px;
     top:9px;
 }
@@ -60,8 +59,7 @@
 
 }
 .lets {
-    width: 247px;
-    height: 66px;
+   
     margin-left: 120px;
     border-radius: 60px;
     border-width: 1px;
@@ -76,18 +74,20 @@
     background: #ffffff;
 }
 button {
-   font-family: "Montserrat";
+    width: 247px;
+    height: 66px;
+    font-family: "Montserrat";
     font-weight: 600;
     font-size: 24px;
     line-height: 142%;
     text-align: center;
     color: #FFFFFF;
+    text-decoration: none;
 }
 button:hover {
     color: #000;
 }
 .navigation {
-    width: 3219px;
     height: 37px;
     border-width: 1px;
     padding-top: 27px;
@@ -95,15 +95,13 @@ button:hover {
     padding-bottom: 27px;
     padding-left: 49px;
     background-image: url(img.html/fr.svg);
-    backdrop-filter: blur(50px)
-    
+    overflow: hidden;
 }
 .navigation::-webkit-scrollbar {
     width: 0;
 }
 .top {
-    width: 1440px;
-    background: #202027;
+    background-color: #202027;
     padding-top: 96px;
 }   
 .top__title {
@@ -140,6 +138,7 @@ button:hover {
     background: #FFFFFF;
     box-shadow: 0px 12.61px 42.25px -7.57px #00000021;
     margin-bottom: 32px;
+    text-decoration: none;
 }
 .games {
     border-radius: 30px;
@@ -176,8 +175,7 @@ button:hover {
     text-decoration-line: none;
 }
 .mingame {
-    width: 1440px;
-    rotate: 0 deg;
+    padding-top: 46px;
     background: #202027;
     padding-bottom: 144px;
 }
@@ -239,7 +237,6 @@ button:hover {
 
 }
 .footer {
-    width: 1441px;
     height: 150px;
     background: #BDED35;
 } 
