--- a/styly.css
+++ b/styly.css
@@ -1,8 +1,12 @@
 * 
-.body {
+.center {
+    padding-left: calc(50% - 600px);
+    padding-right: calc(50% - 600px);
+}
+body {
     font-family: "Montserrat", sans-serif;
 }
-.a {
+a {
     text-decoration: none;
 }
 .head {
@@ -44,7 +48,6 @@
     font-weight: 700;
     font-size: 64px;
     vertical-align: middle;
-    margin-left: 120px;
     color: #000;
     word-break: normal;
  }
@@ -56,13 +59,11 @@
     font-size: 24px;
     line-height: 32px;
     vertical-align: middle;
-    margin-left: 120px;
     margin-bottom: 48px;
 }
 .lets {
     width: 247px;
     height: 66px;
-    margin-left: 120px;
     border-radius: 60px;
     border-width: 1px;
     padding-top: 16px;
@@ -82,6 +83,7 @@ button {
     line-height: 142%;
     text-align: center;
     color: #FFFFFF;
+    padding-bottom: 156px;
 }
 button:hover {
     color: #000;
@@ -90,12 +92,9 @@ button:hover {
     height: 37px;
     border-width: 1px;
     padding-top: 27px;
-    padding-right: 49px;
     padding-bottom: 27px;
-    padding-left: 49px;
-    background-image: url(img.html/fr.svg);
+    background-image: url(img/fr.svg);
     overflow: hidden;
-
 }
 .top {
     background: #202027;
@@ -107,8 +106,7 @@ button:hover {
     font-weight: 700;
     font-size: 64px;
     vertical-align: middle;
-    margin-left: 120px;
-    
+    padding-top: 94px;    
 }
 .names {
     width: 788px;
@@ -119,7 +117,8 @@ button:hover {
     line-height: 32px;
     vertical-align: middle;
     color: #FFFFFF;
-    margin-left: 120px;
+    padding-top: 24px;
+    padding-bottom: 72px;
 }
 .top__game {
     max-width: 1201px;
@@ -127,10 +126,24 @@ button:hover {
     grid-template-columns: repeat(12 , 1fr);
     gap: 32px;
     padding-right: 32px;
-    padding-left: 119px;
 }
-
+.top__pisk {
+   height: 1056px;
+}
+.top__pisks {
+    height: 1056px;
+}
 .top__card {
+    height: 551px;
+    border-radius: 30px;
+    background: #FFFFFF;
+    box-shadow: 0px 12.61px 42.25px -7.57px #00000021;
+    margin-bottom: 32px;
+    text-decoration: none;
+}
+.top__cards {
+    width: 378px;
+    height: 512px;
     border-radius: 30px;
     background: #FFFFFF;
     box-shadow: 0px 12.61px 42.25px -7.57px #00000021;
@@ -138,22 +151,38 @@ button:hover {
     text-decoration: none;
 }
 .games {
+    height: 314px;
     border-radius: 30px;
 }
 .game {
-    padding-bottom: 36px;
+    height: 237px;
     padding-left: 32px;
     background: #FFFFFF;
     border-radius: 30px;
+    padding-right: 32px;
+}
+.gamer {
+    height: 198px;
+    border-radius: 30px;
+    padding-right: 32px;
+    padding-left: 32px;
+
+}
+.gamers {
+    height: 159px;
+    border-radius: 30px;
+    padding-right: 32px;
+    padding-bottom: 36px;
+    padding-left: 32px;
+
 }
 .game__namber {
     width: 108px;
     height: 36px;
     border-radius: 52px;
     padding-top: 8px;
-    padding-bottom: 10px;
     padding-left: 16px;
-    background: #F7F7F7;
+    background-color: #F7F7F7;
     font-family: "Montserrat";
     font-weight: 500;
     font-size: 16px;
@@ -162,16 +191,16 @@ button:hover {
     text-decoration: none;
 }
 .top__link {
-    display: flex;
-    flex-direction: column;
+    width: 314px;
+    height: 78px;
     font-family:"Montserrat" ;
     font-weight: 700;
     font-size: 32px;
     vertical-align: middle;
     color: #202027;
     text-decoration: none;
-    padding-top: 16px;
-    text-decoration: none;
+   
+   
 
 }
 .mingame {
