--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,9 +1,12 @@
 @media(max-width:767px) {
-    .center { 
+   * { 
         margin: 0;
         padding: 0;
     }
-    
+    .center {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
     .top {
         display: none;
     }
@@ -18,9 +21,44 @@
         font-size: 40px;
         text-align: center;
         vertical-align: middle;
+        margin-left: 40.5px;
+        padding-top: 147px;
+    }
+    .name {
+        width: 296px;
+        height: 60px;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-size: 16px;
+        letter-spacing: 0px;
+        text-align: center;
+        vertical-align: middle;
+        margin-left: 23.5px;
+
+    }
+    .lets {
+        width: 285px;
+        height: 55px;
+        margin-left: 29px;
+        padding-top: 9px;
+        margin-bottom: 131px;
+}
+    .navigation {
+        height: 51px;
+        border-width: 0.54px;
+        padding-right: 24px;
+        border: 0.54px solid #FFFFFF33;
+        background-image: url(./img/fr1.svg);
+        overflow: hidden;
     }
     .biges {
         display: none;
+    }
+    .big__one {
+        width: 223px;
+        height: 238px;
+        position: absolute;
+        left: 489px;
     }
     .bigs {
         width: 223px;
@@ -31,4 +69,195 @@
         position: absolute;
     
     }
+    .big {
+        width: 35px;
+        height: 35px;
+}
+    .small {
+        width: 21px;
+        height: 21px;
     }
+    .mingame {
+        height: 3740px;
+        padding-bottom: 32px;
+    }
+    .top__titles {
+        width: 250px;
+        height: 49px;
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: 40px;
+        letter-spacing: 0px;
+        vertical-align: middle;
+        padding-top: 48px;
+        padding-bottom: 48px;
+}
+    .mingame__games {
+        min-width: 343px;
+        height: 528px;
+        box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
+        flex-direction: column-reverse;
+    }
+    .mingame__games_one {
+        min-width: 343px;
+        height: 567px;
+        border-radius: 30px;
+        box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
+        flex-direction: column-reverse;
+    }
+    .mingame__games_to {
+        min-width: 343px;
+        height: 606px;
+        border-radius: 30px;
+        box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
+        flex-direction: column-reverse;
+    }
+    .mingame__game {
+        min-width: 343px;
+        height: 568px;
+        box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
+        flex-direction: column;
+    }
+    .mingame__game_one {
+        min-width: 343px;
+        height: 626px;
+        flex-direction: column;
+        box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
+    }   
+
+    
+    .mingame__part {
+        min-width: 343px;
+        height: 243px;
+        padding-left: 29px;
+    }
+    .mingame__parts {
+        min-width: 343px;
+        height: 282px;
+        padding-left: 29px;
+    }
+     .mingame__parts_one {
+        min-width: 343px;
+        height: 322px;
+        padding-left: 29px;
+    }
+     .mingame__parts_to {
+        min-width: 343px;
+        height: 342px;
+        padding-left: 29px;
+    }
+    .mingame__names {
+        width: 284px;
+        height: 39px;
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: 32px;
+        letter-spacing: 0px;
+        vertical-align: middle;
+        padding-top: 29px;
+        padding-left: 29px;
+    }
+    .mingame__names_one {
+        width: 284px;
+        height: 78px;
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: 32px;
+        vertical-align: middle;
+        padding-left: 29px;
+        padding-top: 29px;
+    }
+    .mingame__name {
+        width: 284px;
+        height: 78px;
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: 32px;
+        letter-spacing: 0px;
+        vertical-align: middle;
+        padding-top: 29px;
+    }
+    .mingame__name_one {
+        width: 284px;
+        height: 117px;
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: 32px;
+        vertical-align: middle;
+        padding-left: 29px;
+        padding-top: 29px;
+    }
+    .mingame__try {
+        width: 240px;
+        height: 40px;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-size: 16px;
+        letter-spacing: 0px;
+        vertical-align: middle;
+        padding-left: 29px;
+        line-height: 100%;
+    }
+    .mingame__try_one {
+        width: 275px;
+        height: 40px;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 100%;
+        vertical-align: middle;
+        padding-left: 29px;
+
+    }
+    .mingame__try_to {
+       width: 285px;
+        height: 40px;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 100%;
+        letter-spacing: 0px;
+        vertical-align: middle;
+        padding-left: 29px;
+
+    }
+    .mingame__trys {
+        width: 285px;
+        height: 60px;
+        font-family: "Montserrat";
+        font-weight: 400;
+        font-size: 16px;
+        letter-spacing: 0px;
+        vertical-align: middle;
+        padding-left: 29px;
+        line-height: 100%;
+
+    }
+    .mingame__play {
+        min-width: 285px;
+        height: 55px;
+        padding-top: 10px;
+        padding-bottom: 32px;
+}
+    .mingame__card {
+        width: 343px;
+        height: 284px;
+}
+    .footer{
+        height: 100px;
+    } 
+    .footer__law {
+        width: 190px;
+        height: 20px;
+        font-family: "Montserrat";
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 100%;
+        text-align: center;
+        vertical-align: middle;
+        padding-left: 63px;
+        padding-top: 40px;
+        margin-left: 6px;
+        margin-bottom: 40px;
+    }   
+}
