--- a/style.css
+++ b/style.css
@@ -1,340 +1,758 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
-*  { 
+.center {
+  padding-left: calc(50% - 600px);
+  padding-right: calc(50% - 600px);
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.head {
+  background-color: #E1FF8F;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.head__top {
+  height: 710px;
+}
+
+.biges {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+}
+
+.big__one {
+  display: none;
+}
+
+.small {
+  width: 35px;
+  height: 35px;
+  top: 69px;
+  left: 156px;
+  position: absolute;
+}
+
+.big {
+  width: 57px;
+  height: 57px;
+  top: 94px;
+  left: 63px;
+  position: absolute;
+}
+
+.star {
+  width: 37px;
+  left: 948px;
+  position: absolute;
+}
+
+.stars {
+  width: 83px;
+  left: 1013px;
+  bottom: 148px;
+  position: absolute;
+}
+
+.bigs {
+  display: none;
+}
+
+.title {
+  width: 769px;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 64px;
+  vertical-align: middle;
+  color: #000;
+  word-break: normal;
+  padding-top: 196px;
+}
+
+.name {
+  width: 720px;
+  height: 64px;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  vertical-align: middle;
+  padding-bottom: 48px;
+}
+
+.lets {
+  width: 247px;
+  height: 66px;
+  border-radius: 60px;
+  border-width: 1px;
+  padding-top: 16px;
+  padding-right: 28px;
+  padding-bottom: 16px;
+  padding-left: 28px;
+  background: #202027;
+  border: 1px solid #202027;
+}
+
+.lets:hover {
+  background: #ffffff;
+}
+
+button {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 142%;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+button:hover {
+  color: #000;
+}
+
+.navigation {
+  height: 90px;
+  border-width: 1px;
+  background-image: url(img/fr.svg);
+  overflow: hidden;
+}
+
+.top {
+  background: #202027;
+}
+
+.top__s {
+  width: 584px;
+  height: 584px;
+  top: 945.92px;
+  right: 0;
+  position: absolute;
+}
+
+.top__title {
+  color: #FFFFFF;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 64px;
+  vertical-align: middle;
+  padding-top: 94px;
+}
+
+.top__titles {
+  color: #FFFFFF;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 64px;
+  vertical-align: middle;
+  padding-top: 96px;
+  padding-bottom: 72px;
+}
+
+.names {
+  width: 788px;
+  height: 96px;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  vertical-align: middle;
+  color: #FFFFFF;
+  padding-top: 24px;
+  padding-bottom: 72px;
+}
+
+.top__game {
+  max-width: 1201px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 32px;
+  padding-right: 32px;
+}
+
+.top__pisk {
+  height: 1056px;
+}
+
+.top__pisks {
+  height: 1056px;
+}
+
+.top__card {
+  height: 551px;
+  border-radius: 30px;
+  background: #FFFFFF;
+  box-shadow: 0px 12.61px 42.25px -7.57px rgba(0, 0, 0, 0.1294117647);
+  margin-bottom: 32px;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.top__card:hover {
+  transform: scale(1.05);
+  z-index: 1;
+}
+
+.top__cards {
+  width: 378px;
+  height: 512px;
+  border-radius: 30px;
+  background: #FFFFFF;
+  box-shadow: 0px 12.61px 42.25px -7.57px rgba(0, 0, 0, 0.1294117647);
+  margin-bottom: 32px;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+}
+
+.top__cards:hover {
+  transform: scale(1.05);
+  z-index: 1;
+}
+
+.games {
+  height: 314px;
+  border-radius: 30px;
+}
+
+.game {
+  height: 237px;
+  padding-left: 32px;
+  background: #FFFFFF;
+  border-radius: 30px;
+  padding-right: 32px;
+}
+
+.gamer {
+  height: 198px;
+  border-radius: 30px;
+  padding-right: 32px;
+  padding-left: 32px;
+}
+
+.gamers {
+  height: 159px;
+  border-radius: 30px;
+  padding-right: 32px;
+  padding-bottom: 36px;
+  padding-left: 32px;
+}
+
+.game__namber {
+  width: 108px;
+  height: 36px;
+  border-radius: 52px;
+  padding-top: 8px;
+  padding-left: 16px;
+  background-color: #F7F7F7;
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 16px;
+  vertical-align: bottom;
+  color: #202027;
+  text-decoration: none;
+}
+
+.top__link {
+  width: 314px;
+  height: 78px;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 32px;
+  vertical-align: middle;
+  color: #202027;
+  text-decoration: none;
+}
+
+.mingame {
+  background: #202027;
+  padding-bottom: 144px;
+}
+
+.mingame__cards {
+  gap: 32px;
+  display: flex;
+  flex-direction: column;
+}
+
+.mingame__name {
+  width: 504px;
+  height: 118px;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 48px;
+  vertical-align: middle;
+  padding-top: 48px;
+}
+
+.mingame__name_one {
+  width: 504px;
+  height: 118px;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 48px;
+  vertical-align: middle;
+  padding-top: 48px;
+}
+
+.mingame__part {
+  width: 600px;
+  height: 500px;
+  padding-left: 48px;
+}
+
+.mingame__parts {
+  min-width: 600px;
+  height: 500px;
+  padding-left: 48px;
+}
+
+.mingame__parts_to {
+  min-width: 600px;
+  height: 500px;
+  padding-left: 48px;
+}
+
+.mingame__parts_one {
+  min-width: 600px;
+  height: 500px;
+  padding-left: 48px;
+}
+
+.mingame__card {
+  display: flex;
+  width: 600px;
+  height: 500px;
+  border-radius: 30px;
+}
+
+.mingame__games {
+  display: flex;
+  flex-direction: row;
+  min-width: 1200px;
+  height: 500px;
+  border-radius: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 20px 67px -12px rgba(0, 0, 0, 0.1294117647);
+}
+
+.mingame__games_one {
+  display: flex;
+  flex-direction: row;
+  min-width: 1200px;
+  height: 500px;
+  border-radius: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 20px 67px -12px rgba(0, 0, 0, 0.1294117647);
+}
+
+.mingame__game {
+  display: flex;
+  flex-direction: row;
+  min-width: 1200px;
+  height: 500px;
+  border-radius: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 20px 67px -12px rgba(0, 0, 0, 0.1294117647);
+}
+
+.mingame__game_one {
+  display: flex;
+  flex-direction: row;
+  min-width: 1200px;
+  height: 500px;
+  border-radius: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 20px 67px -12px rgba(0, 0, 0, 0.1294117647);
+}
+
+.mingame__games_to {
+  display: flex;
+  flex-direction: row;
+  min-width: 1200px;
+  height: 500px;
+  border-radius: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 20px 67px -12px rgba(0, 0, 0, 0.1294117647);
+}
+
+.mingame__names {
+  width: 504px;
+  height: 59px;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 48px;
+  vertical-align: middle;
+  color: #202027;
+  padding-top: 48px;
+}
+
+.mingame__names_one {
+  width: 504px;
+  height: 59px;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 48px;
+  vertical-align: middle;
+  color: #202027;
+  padding-top: 48px;
+}
+
+.mingame__try {
+  width: 457px;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  color: #202027;
+  vertical-align: middle;
+  padding-top: 24px;
+  padding-bottom: 36px;
+}
+
+.mingame__try_one {
+  width: 457px;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  color: #202027;
+  vertical-align: middle;
+  padding-top: 24px;
+  padding-bottom: 36px;
+}
+
+.mingame__try_to {
+  width: 457px;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  color: #202027;
+  vertical-align: middle;
+  padding-top: 24px;
+  padding-bottom: 36px;
+}
+
+.mingame__trys {
+  width: 457px;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 32px;
+  color: #202027;
+  vertical-align: middle;
+  padding-top: 24px;
+  padding-bottom: 36px;
+}
+
+.mingame__play {
+  width: 247px;
+  height: 66px;
+  gap: 10px;
+  border-radius: 60px;
+  padding-top: 16px;
+  padding-right: 28px;
+  padding-bottom: 16px;
+  padding-left: 28px;
+  background: #202027;
+}
+
+.mingame__play:hover {
+  background: #FFFFFF;
+}
+
+.button {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 142%;
+  text-align: center;
+  color: #FFFFFF;
+  padding-left: 48px;
+}
+
+.footer {
+  height: 150px;
+  background: #BDED35;
+}
+
+.footer__law {
+  font-family: "Montserrat";
+  width: 285px;
+  font-weight: 600;
+  font-size: 24px;
+  text-align: center;
+  vertical-align: middle;
+  color: #000;
+  padding-top: 61px;
+  margin-left: 578px;
+  margin-bottom: 60px;
+}
+
+@media (max-width: 767px) {
+  * {
     margin: 0;
     padding: 0;
-}
-.center {
-    padding-left: calc(50% - 600px);
-    padding-right: calc(50% - 600px);
-}
-body {
-    font-family: "Montserrat", sans-serif;
-}
-a {
-    text-decoration: none;
-}
-.head {
-    background-color: #E1FF8F;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-.head__top {
-    height: 710px;
-    }
-.biges {
+  }
+  .center {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .top {
+    display: none;
+  }
+  .head__top {
+    height: 648px;
+  }
+  .title {
+    width: 262px;
+    height: 196px;
+    font-family: "Montserrat";
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    vertical-align: middle;
+    margin-left: 40.5px;
+    padding-top: 147px;
+  }
+  .name {
+    width: 296px;
+    height: 60px;
+    font-family: "Montserrat";
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0px;
+    text-align: center;
+    vertical-align: middle;
+    margin-left: 23.5px;
+  }
+  .lets {
+    width: 285px;
+    height: 55px;
+    margin-left: 29px;
+    padding-top: 9px;
+    margin-bottom: 131px;
+  }
+  .navigation {
+    height: 51px;
+    border-width: 0.54px;
+    padding-right: 24px;
+    border: 0.54px solid rgba(255, 255, 255, 0.2);
+    background-image: url(./img/fr1.svg);
+    overflow: hidden;
+  }
+  .biges {
+    display: none;
+  }
+  .big__one {
+    width: 223px;
+    height: 238px;
     position: absolute;
-    right: 0px;
-    top: 0px;
-    
-}
-.small {
+    left: 489px;
+  }
+  .bigs {
+    width: 223px;
+    height: 238px;
+    top: -40.43px;
+    left: 489.81px;
+    position: -108.68 deg;
+    position: absolute;
+  }
+  .big {
     width: 35px;
     height: 35px;
-    top: 69px;
-    left: 156px;
-    position: absolute;
-}
-.big {
-    width: 57px;
-    height: 57px;
-    top: 94px;
-    left: 63px;
-   position: absolute;
-}
-.star {
-    width: 37px;
-    left: 948px;
-    position: absolute;
-}
-.stars {
-    width: 83px;
-    left: 1013px;
-    bottom: 148px;
-    position: absolute;
-}
-.bigs {
-    display: none;
-}
-.title {
-    width: 769px;
+  }
+  .small {
+    width: 21px;
+    height: 21px;
+  }
+  .mingame {
+    height: 3740px;
+    padding-bottom: 32px;
+  }
+  .top__titles {
+    width: 250px;
+    height: 49px;
     font-family: "Montserrat";
     font-weight: 700;
-    font-size: 64px;
+    font-size: 40px;
+    letter-spacing: 0px;
     vertical-align: middle;
-    color: #000;
-    word-break: normal;
-    padding-top: 196px;
- }
-.name {
-    width: 720px;
-    height: 64px;
-    font-family: "Montserrat";
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    vertical-align: middle;
+    padding-top: 48px;
     padding-bottom: 48px;
-}
-.lets {
-    width: 247px;
-    height: 66px;
-    border-radius: 60px;
-    border-width: 1px;
-    padding-top: 16px;
-    padding-right: 28px;
-    padding-bottom: 16px;
-    padding-left: 28px;
-    background: #202027;
-    border: 1px solid #202027;
-}
-.lets:hover {
-    background: #ffffff;
-}
-button {
-    font-family: "Montserrat";
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 142%;
-    text-align: center;
-    color: #FFFFFF;
-   
-}
-button:hover {
-    color: #000;
-}
-.navigation {
-    height: 37px;
-    border-width: 1px;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    background-image: url(img/fr.svg);
-    overflow: hidden;
-}
-.top {
-    background: #202027;
-    
-}   
-.top__title {
-    color: #FFFFFF;
+  }
+  .mingame__games {
+    min-width: 343px;
+    height: 528px;
+    box-shadow: 0px 11.44px 38.34px -6.87px rgba(0, 0, 0, 0.1294117647);
+    flex-direction: column-reverse;
+  }
+  .mingame__games_one {
+    min-width: 343px;
+    height: 567px;
+    border-radius: 30px;
+    box-shadow: 0px 11.44px 38.34px -6.87px rgba(0, 0, 0, 0.1294117647);
+    flex-direction: column-reverse;
+  }
+  .mingame__games_to {
+    min-width: 343px;
+    height: 606px;
+    border-radius: 30px;
+    box-shadow: 0px 11.44px 38.34px -6.87px rgba(0, 0, 0, 0.1294117647);
+    flex-direction: column-reverse;
+  }
+  .mingame__game {
+    min-width: 343px;
+    height: 568px;
+    box-shadow: 0px 11.44px 38.34px -6.87px rgba(0, 0, 0, 0.1294117647);
+    flex-direction: column;
+  }
+  .mingame__game_one {
+    min-width: 343px;
+    height: 626px;
+    flex-direction: column;
+    box-shadow: 0px 11.44px 38.34px -6.87px rgba(0, 0, 0, 0.1294117647);
+  }
+  .mingame__part {
+    min-width: 343px;
+    height: 243px;
+    padding-left: 29px;
+  }
+  .mingame__parts {
+    min-width: 343px;
+    height: 282px;
+    padding-left: 29px;
+  }
+  .mingame__parts_one {
+    min-width: 343px;
+    height: 322px;
+    padding-left: 29px;
+  }
+  .mingame__parts_to {
+    min-width: 343px;
+    height: 342px;
+    padding-left: 29px;
+  }
+  .mingame__names {
+    width: 284px;
+    height: 39px;
     font-family: "Montserrat";
     font-weight: 700;
-    font-size: 64px;
+    font-size: 32px;
+    letter-spacing: 0px;
     vertical-align: middle;
-    padding-top: 94px; 
-}
-.top__titles {
-    color: #FFFFFF;
-    font-family: "Montserrat";
-    font-weight: 700;
-    font-size: 64px;
-    vertical-align: middle;
-    padding-top: 96px; 
-    padding-bottom: 72px;
-}
-.names {
-    width: 788px;
-    height: 96px;
-    font-family: "Montserrat";
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    vertical-align: middle;
-    color: #FFFFFF;
-    padding-top: 24px;
-    padding-bottom: 72px;
-}
-.top__game {
-    max-width: 1201px;
-    display: grid;
-    grid-template-columns: repeat(12 , 1fr);
-    gap: 32px;
-    padding-right: 32px;
-}
-.top__pisk {
-   height: 1056px;
-}
-.top__pisks {
-    height: 1056px;
-}
-.top__card {
-    height: 551px;
-    border-radius: 30px;
-    background: #FFFFFF;
-    box-shadow: 0px 12.61px 42.25px -7.57px #00000021;
-    margin-bottom: 32px;
-    text-decoration: none;
-    transition: transform 0.3s ease;
-}
-.top__card:hover {
-    transform: scale(1.05);
-    z-index: 1;
-}
-.top__cards {
-    width: 378px;
-    height: 512px;
-    border-radius: 30px;
-    background: #FFFFFF;
-    box-shadow: 0px 12.61px 42.25px -7.57px #00000021;
-    margin-bottom: 32px;
-    text-decoration: none;
-    transition: transform 0.3s ease;
-}
-.top__cards:hover {
-    transform: scale(1.05);
-    z-index: 1;
-}
-.games {
-    height: 314px;
-    border-radius: 30px;
-}
-.game {
-    height: 237px;
-    padding-left: 32px;
-    background: #FFFFFF;
-    border-radius: 30px;
-    padding-right: 32px;
-}
-.gamer {
-    height: 198px;
-    border-radius: 30px;
-    padding-right: 32px;
-    padding-left: 32px;
-
-}
-.gamers {
-    height: 159px;
-    border-radius: 30px;
-    padding-right: 32px;
-    padding-bottom: 36px;
-    padding-left: 32px;
-
-}
-.game__namber {
-    width: 108px;
-    height: 36px;
-    border-radius: 52px;
-    padding-top: 8px;
-    padding-left: 16px;
-    background-color: #F7F7F7;
-    font-family: "Montserrat";
-    font-weight: 500;
-    font-size: 16px;
-    vertical-align: bottom;
-    color: #202027;
-    text-decoration: none;
-}
-.top__link {
-    width: 314px;
+    padding-top: 29px;
+    padding-left: 29px;
+  }
+  .mingame__names_one {
+    width: 284px;
     height: 78px;
-    font-family:"Montserrat" ;
+    font-family: "Montserrat";
     font-weight: 700;
     font-size: 32px;
     vertical-align: middle;
-    color: #202027;
-    text-decoration: none;
-}  
-.mingame {
-    background: #202027;
-    padding-bottom: 144px;
-   
-}
-.mingame__cards {
-    gap: 32px;
-    display: flex;
-    flex-direction: column;
-    
-    
-}
-.mingame__name {
-    width: 504px;
-    height: 118px;
+    padding-left: 29px;
+    padding-top: 29px;
+  }
+  .mingame__name {
+    width: 284px;
+    height: 78px;
     font-family: "Montserrat";
     font-weight: 700;
-    font-size: 48px;
+    font-size: 32px;
+    letter-spacing: 0px;
     vertical-align: middle;
-    padding-top:48px ;
-}
-.mingame__part {
-    width: 600px;
-    height: 500px;
-    padding-left: 48px;
-}
-.mingame__card {
-    display: flex; 
-    width: 600px;
-    height: 500px;
-    border-radius: 30px;
-
-}
-.mingame__games {
-    display: flex;
-    flex-direction: row;
-    min-width: 1200px;
-    height: 500px;
-    border-radius: 30px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 20px 67px -12px #00000021;
-    
-}
-.mingame__names {
-    width: 504px;
-    height: 59px;
+    padding-top: 29px;
+  }
+  .mingame__name_one {
+    width: 284px;
+    height: 117px;
     font-family: "Montserrat";
     font-weight: 700;
-    font-size: 48px;
+    font-size: 32px;
     vertical-align: middle;
-    color: #202027;
-    padding-top: 48px;
-   
-}
-.mingame__try  {
-    width: 457px;
+    padding-left: 29px;
+    padding-top: 29px;
+  }
+  .mingame__try {
+    width: 240px;
+    height: 40px;
     font-family: "Montserrat";
     font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
-    color: #202027;
+    font-size: 16px;
+    letter-spacing: 0px;
     vertical-align: middle;
-    padding-top: 24px;
-    padding-bottom: 36px;
-}
-.mingame__play {
-    width: 247px;
-    height: 66px;
-    gap: 10px;
-    border-radius: 60px;
-    padding-top: 16px;
-    padding-right: 28px;
-    padding-bottom: 16px;
-    padding-left: 28px;
-    background: #202027;
-} 
-.mingame__play:hover {
-    background: #FFFFFF;
-}
-.button {
+    padding-left: 29px;
+    line-height: 100%;
+  }
+  .mingame__try_one {
+    width: 275px;
+    height: 40px;
     font-family: "Montserrat";
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 142%;
-    text-align: center;
-    color: #FFFFFF;
-    padding-left: 48px;
-}
-.footer {
-    height: 150px;
-    background: #BDED35;
-} 
-.footer__law {
-    font-family: "Montserrat";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    vertical-align: middle;
+    padding-left: 29px;
+  }
+  .mingame__try_to {
     width: 285px;
+    height: 40px;
+    font-family: "Montserrat";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    letter-spacing: 0px;
+    vertical-align: middle;
+    padding-left: 29px;
+  }
+  .mingame__trys {
+    width: 285px;
+    height: 60px;
+    font-family: "Montserrat";
+    font-weight: 400;
+    font-size: 16px;
+    letter-spacing: 0px;
+    vertical-align: middle;
+    padding-left: 29px;
+    line-height: 100%;
+  }
+  .mingame__play {
+    min-width: 285px;
+    height: 55px;
+    padding-top: 10px;
+    padding-bottom: 32px;
+  }
+  .mingame__card {
+    width: 343px;
+    height: 284px;
+  }
+  .footer {
+    height: 100px;
+  }
+  .footer__law {
+    width: 190px;
+    height: 20px;
+    font-family: "Montserrat";
     font-weight: 600;
-    font-size: 24px;
+    font-size: 16px;
+    line-height: 100%;
     text-align: center;
     vertical-align: middle;
-    color: #000;
-    padding-top: 61px;
-    margin-left: 578px;
-    margin-bottom: 60px;
-}
+    padding-left: 63px;
+    padding-top: 40px;
+    margin-left: 6px;
+    margin-bottom: 40px;
+  }
+}/*# sourceMappingURL=style.css.map */
