--- a/_mobile.scss
+++ b/_mobile.scss
@@ -34,7 +34,8 @@
         text-align: center;
         vertical-align: middle;
         margin-left: 23.5px;
-
+        padding-bottom: 36px;
+        line-height: 100%;
     }
     .lets {
         width: 285px;
@@ -42,6 +43,18 @@
         margin-left: 29px;
         padding-top: 9px;
         margin-bottom: 131px;
+}
+    .star {
+        width: 18px;
+        height: 18px;
+        top: 557px;
+        left: 273px;
+}
+    .stars {
+        width: 39px;
+        height: 41px;
+        top: 580px;
+        left: 304px;
 }
     .navigation {
         height: 51px;
@@ -58,7 +71,10 @@
         width: 223px;
         height: 238px;
         position: absolute;
-        left: 489px;
+        right: 0px;
+        top: 0px;
+
+
     }
     .bigs {
         width: 223px;
@@ -77,9 +93,9 @@
         width: 21px;
         height: 21px;
     }
-    .mingame {
+    .min {
         height: 3740px;
-        padding-bottom: 32px;
+        padding-bottom: 9px;
     }
     .top__titles {
         width: 250px;
@@ -92,33 +108,36 @@
         padding-top: 48px;
         padding-bottom: 48px;
 }
-    .mingame__games {
+    .min__cards {
+        gap: 24px;
+    }
+    .min__games {
         min-width: 343px;
         height: 528px;
         box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
         flex-direction: column-reverse;
     }
-    .mingame__games_one {
+    .min__games_one {
         min-width: 343px;
         height: 567px;
         border-radius: 30px;
         box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
         flex-direction: column-reverse;
     }
-    .mingame__games_to {
+    .min__games_to {
         min-width: 343px;
         height: 606px;
         border-radius: 30px;
         box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
         flex-direction: column-reverse;
     }
-    .mingame__game {
+    .min__game {
         min-width: 343px;
         height: 568px;
         box-shadow: 0px 11.44px 38.34px -6.87px #00000021;
         flex-direction: column;
     }
-    .mingame__game_one {
+    .min__game_one {
         min-width: 343px;
         height: 626px;
         flex-direction: column;
@@ -126,27 +145,27 @@
     }   
 
     
-    .mingame__part {
-        min-width: 343px;
+    .min__part {
+        width: 343px;
         height: 243px;
         padding-left: 29px;
     }
-    .mingame__parts {
-        min-width: 343px;
+    .min__parts {
+        width: 343px;
         height: 282px;
         padding-left: 29px;
     }
-     .mingame__parts_one {
-        min-width: 343px;
+     .min__parts_one {
+        width: 343px;
         height: 322px;
         padding-left: 29px;
     }
-     .mingame__parts_to {
-        min-width: 343px;
+     .min__parts_to {
+        width: 343px;
         height: 342px;
         padding-left: 29px;
     }
-    .mingame__names {
+    .min__names {
         width: 284px;
         height: 39px;
         font-family: "Montserrat";
@@ -155,19 +174,19 @@
         letter-spacing: 0px;
         vertical-align: middle;
         padding-top: 29px;
-        padding-left: 29px;
+        
     }
-    .mingame__names_one {
+    .min__names_one {
         width: 284px;
         height: 78px;
         font-family: "Montserrat";
         font-weight: 700;
         font-size: 32px;
         vertical-align: middle;
-        padding-left: 29px;
         padding-top: 29px;
+        padding-bottom: 16px;
     }
-    .mingame__name {
+    .min__name {
         width: 284px;
         height: 78px;
         font-family: "Montserrat";
@@ -177,17 +196,16 @@
         vertical-align: middle;
         padding-top: 29px;
     }
-    .mingame__name_one {
+    .min__name_one {
         width: 284px;
         height: 117px;
         font-family: "Montserrat";
         font-weight: 700;
         font-size: 32px;
         vertical-align: middle;
-        padding-left: 29px;
         padding-top: 29px;
     }
-    .mingame__try {
+    .min__try {
         width: 240px;
         height: 40px;
         font-family: "Montserrat";
@@ -195,10 +213,9 @@
         font-size: 16px;
         letter-spacing: 0px;
         vertical-align: middle;
-        padding-left: 29px;
         line-height: 100%;
     }
-    .mingame__try_one {
+    .min__try_one {
         width: 275px;
         height: 40px;
         font-family: "Montserrat";
@@ -206,10 +223,10 @@
         font-size: 16px;
         line-height: 100%;
         vertical-align: middle;
-        padding-left: 29px;
+        
 
     }
-    .mingame__try_to {
+    .min__try_to {
        width: 285px;
         height: 40px;
         font-family: "Montserrat";
@@ -218,10 +235,10 @@
         line-height: 100%;
         letter-spacing: 0px;
         vertical-align: middle;
-        padding-left: 29px;
+        
 
     }
-    .mingame__trys {
+    .min__trys {
         width: 285px;
         height: 60px;
         font-family: "Montserrat";
@@ -229,17 +246,16 @@
         font-size: 16px;
         letter-spacing: 0px;
         vertical-align: middle;
-        padding-left: 29px;
         line-height: 100%;
 
     }
-    .mingame__play {
+    .min__play {
         min-width: 285px;
         height: 55px;
         padding-top: 10px;
         padding-bottom: 32px;
 }
-    .mingame__card {
+    .min__card {
         width: 343px;
         height: 284px;
 }
