в футере добавлены значения алекса для центрирования текста

--- a/style.css
+++ b/style.css
@@ -535,8 +535,12 @@ button:hover {
   vertical-align: middle;
   color: #000;
   padding-top: 61px;
-  margin-left: 578px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   margin-bottom: 60px;
+  margin-left: 578px;
 }
 
 @media (max-width: 767px) {
