--- a/style.scss
+++ b/style.scss
@@ -483,7 +483,11 @@ button:hover {
     vertical-align: middle;
     color: #000;
     padding-top: 61px;
-    margin-left: 578px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     margin-bottom: 60px;
+    margin-left: 578px;
 }
 @import"mobile";
