сделала поправки в шрифте кнопки

--- a/_mobile.scss
+++ b/_mobile.scss
@@ -43,6 +43,13 @@
         margin-left: 29px;
         padding-top: 9px;
         margin-bottom: 131px;
+        font-family: Montserrat;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 142%;
+        letter-spacing: 0%;
+        text-align: center;
+
 }
     .star {
         width: 18px;
@@ -73,7 +80,6 @@
         position: absolute;
         right: 0px;
         top: 0px;
-
 
     }
     .bigs {
