--- a/style.scss
+++ b/style.scss
@@ -26,9 +26,6 @@ a {
     right: 0px;
     top: 0px;
 }
-.big__one {
-    display: none;
-}
 .small {
     width: 35px;
     height: 35px;
@@ -80,6 +77,11 @@ a {
 .lets {
     width: 247px;
     height: 66px;
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 142%;
+    text-align: center;
     border-radius: 60px;
     border-width: 1px;
     padding-top: 16px;
