--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,10 +1,12 @@
 @media(max-width:767px) {
-   * { 
-        margin: 0;
-        padding: 0;
-    }
+   * 
+   body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+   }
+        
     .center {
-        padding-left: 16px;
         padding-right: 16px;
     }
     .top {
@@ -12,6 +14,7 @@
     }
     .head__top {
         height: 648px;
+       
     }
     .title {
         width: 262px;
@@ -71,18 +74,7 @@
         background-image: url(./img/fr1.svg);
         overflow: hidden;
     }
-    .biges {
-        display: none;
-    }
-    .big__one {
-        width: 223px;
-        height: 238px;
-        position: absolute;
-        right: 0px;
-        top: 0px;
-
-    }
-    .bigs {
+   .bigs {
         width: 223px;
         height: 238px;
         top: -40.43px;
@@ -95,6 +87,15 @@
         width: 35px;
         height: 35px;
 }
+    .biges {
+        display: none;
+    }
+    .big__one {
+        top: 0px;
+        right: 0px;
+        position: absolute;
+
+    }
     .small {
         width: 21px;
         height: 21px;
@@ -102,6 +103,7 @@
     .min {
         height: 3740px;
         padding-bottom: 9px;
+        padding-left: 16px;
     }
     .top__titles {
         width: 250px;
@@ -220,6 +222,8 @@
         letter-spacing: 0px;
         vertical-align: middle;
         line-height: 100%;
+        padding-top: 16px;
+        padding-bottom: 32px;
     }
     .min__try_one {
         width: 275px;
@@ -229,7 +233,8 @@
         font-size: 16px;
         line-height: 100%;
         vertical-align: middle;
-        
+        padding-top: 16px;
+        padding-bottom: 32px;
 
     }
     .min__try_to {
@@ -241,7 +246,8 @@
         line-height: 100%;
         letter-spacing: 0px;
         vertical-align: middle;
-        
+        padding-top: 16px;
+        padding-bottom: 32px;
 
     }
     .min__trys {
@@ -265,8 +271,17 @@
         width: 343px;
         height: 284px;
 }
-    .footer{
+    button {
+        font-family: "Montserrat";
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 142%;
+        text-align: center;
+
+    }
+    .footer {
         height: 100px;
+        padding-left: 16px;
     } 
     .footer__law {
         width: 190px;
