--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
   margin: 0;
-  padding: 0;
 }
 
 .center {
@@ -31,6 +30,10 @@ a {
   position: absolute;
   right: 0px;
   top: 0px;
+}
+
+.big__one {
+  display: none;
 }
 
 .small {
@@ -543,12 +546,12 @@ button:hover {
 }
 
 @media (max-width: 767px) {
-  * {
+  * body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
   }
   .center {
-    padding-left: 16px;
     padding-right: 16px;
   }
   .top {
@@ -614,16 +617,6 @@ button:hover {
     background-image: url(./img/fr1.svg);
     overflow: hidden;
   }
-  .biges {
-    display: none;
-  }
-  .big__one {
-    width: 223px;
-    height: 238px;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-  }
   .bigs {
     width: 223px;
     height: 238px;
@@ -636,6 +629,14 @@ button:hover {
     width: 35px;
     height: 35px;
   }
+  .biges {
+    display: none;
+  }
+  .big__one {
+    top: 0px;
+    right: 0px;
+    position: absolute;
+  }
   .small {
     width: 21px;
     height: 21px;
@@ -643,6 +644,7 @@ button:hover {
   .min {
     height: 3740px;
     padding-bottom: 9px;
+    padding-left: 16px;
   }
   .top__titles {
     width: 250px;
@@ -758,6 +760,8 @@ button:hover {
     letter-spacing: 0px;
     vertical-align: middle;
     line-height: 100%;
+    padding-top: 16px;
+    padding-bottom: 32px;
   }
   .min__try_one {
     width: 275px;
@@ -767,6 +771,8 @@ button:hover {
     font-size: 16px;
     line-height: 100%;
     vertical-align: middle;
+    padding-top: 16px;
+    padding-bottom: 32px;
   }
   .min__try_to {
     width: 285px;
@@ -777,6 +783,8 @@ button:hover {
     line-height: 100%;
     letter-spacing: 0px;
     vertical-align: middle;
+    padding-top: 16px;
+    padding-bottom: 32px;
   }
   .min__trys {
     width: 285px;
@@ -798,8 +806,16 @@ button:hover {
     width: 343px;
     height: 284px;
   }
+  button {
+    font-family: "Montserrat";
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 142%;
+    text-align: center;
+  }
   .footer {
     height: 100px;
+    padding-left: 16px;
   }
   .footer__law {
     width: 190px;
