--- a/style.scss
+++ b/style.scss
@@ -51,6 +51,7 @@ a {
 .star {
     width: 37px;
     left: 948px;
+    top: 538px;
     position: absolute;
 }
 .stars {
@@ -97,6 +98,7 @@ a {
     background: #202027;
     border: 1px solid #202027;
     margin-top: 48px;
+    margin-bottom: 156px;
 }
 .lets:hover {
     background: #ffffff;
