--- a/_mobile.scss
+++ b/_mobile.scss
@@ -49,12 +49,13 @@
         letter-spacing: 0%;
         text-align: center;
         margin-top: 36px;
+        margin-bottom: 131px;
 }
     .star {
         width: 18px;
         height: 18px;
         top: 557px;
-        left: 273px;
+        left: 237px;
 }
     .stars {
         width: 39px;
